correct width slider wrapp

--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,8 @@
 
 /* <!-- vkrupitsyn --> */
 
-.lazy {
+.slider-vlad {
+  width: 500px;
   display: flex;
   justify-content: center;
 }
